# zuul

./: .gitmodules  gen_export.sh  zuul.lht  zuul.sch
hardware/: gafrc  gen_export.sh  zuul.prj  zuul.sch
hardware/gerbers/zuul/v1/: zuul._NPTH.drl  zuul.bottom_copper.gbl  zuul.bottom_mask.gbs  zuul.drl  zuul.fab  zuul.global_outline.gko  zuul.gvp  zuul.pmech.gko  zuul.top_copper.gtl  zuul.top_mask.gts  zuul.top_paste.gtp  zuul.top_silk.gto  zuul.umech.gko
software/clairvoyant/: Cargo.toml
software/clairvoyant/src/: atparser.rs  blink.rs  config.rs  event.rs  main.rs  mainloop.rs  modem.rs  timer.rs  whitelist.rs
software/clairvoyant/src/whitelist/: parser.rs
