[package]
name = "clairvoyant"
version = "0.1.0"
authors = ["TQ Hirsch <thequux@thequux.com>"]
edition = "2018"

[dependencies]
serial-unix = "0.4.0"
serial = "0.4.0"
serial-core = "0.4.0"
structopt = "0.2.15"
serde = {version = "1.0.90", features = ["serde_derive", "rc"] }
toml = "0.5.0"
regex = "1.2.1"
lazy_static = "1.3.0"
rppal = "0.11.3"
mosquitto-client = "0.1.5"
embedded-hal = "0.2.3"
slog = "2.5.2"
paho-mqtt = "0.5.0"
nom = "5.0.0"

[dev-dependencies]
